# occ_package

./: README.md
allcode/: pyproject.toml  setup.py
allcode/examples/: Example.ipynb
allcode/examples/.ipynb_checkpoints/: Examples-checkpoint.ipynb
allcode/src/: __init__.py  spmap.py  wocemaps.py
wocecolormaps/.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  tests-checkpoint
wocecolormaps/src/: Examples.ipynb
wocecolormaps/src/.ipynb_checkpoints/: wocemaps-checkpoint.py
wocecolormaps/src/example_data/woa18/woa_aou_all/: .zmetadata
wocecolormaps/src/example_data/woa18/woa_aou_all/aou/: .zattrs  0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
wocecolormaps/src/example_data/woa18/woa_oxygen_dissolved_all/: .zmetadata
wocecolormaps/src/example_data/woa18/woa_oxygen_dissolved_all/depth/: .zarray  0
wocecolormaps/src/example_data/woa18/woa_oxygen_dissolved_all/dissolved/: .zarray  .zattrs  0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
wocecolormaps/src/example_data/woa18/woa_oxygen_saturation_all/: .zmetadata
wocecolormaps/src/example_data/woa18/woa_oxygen_saturation_all/oxygen_saturation/: .zattrs  0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  (+19 more)
(+2 files in other folders)
